# usestakly

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TODO.md  dev.bat  dev.ps1  docker-compose.yml  herald_usestakly_20260506_1905.md  stop.bat  stop.ps1
backend/: .dockerignore  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/migrations/: 0001_init_extensions.sql  0002_users_auth.sql  0003_libraries.sql  0004_snippet_kinds.sql  0005_snippets.sql  0006_snippet_versions.sql  0007_tags_and_rule_sets.sql  0008_permissions_and_reports.sql  0009_generations_and_indexes.sql  0010_quality_signals.sql  0011_github_artifacts.sql  0012_watchlists.sql  0013_agent_tokens.sql  0014_agent_token_events.sql  0015_quality_signal_review.sql  0016_quality_signal_events.sql  0017_repo_embeddings.sql  0018_repo_vitality.sql  0019_artifact_scores_vitality.sql  0020_use_case_watches.sql  0021_repo_categories.sql  0022_repo_radar_snapshots.sql  0023_notification_channels.sql  0024_notification_digest_preferences.sql  0025_email_locale.sql  0025_use_case_watch_notifications.sql  0027_github_ingestion_reliability.sql  0028_email_locale_en_only.sql  0029_repo_refresh_events.sql
backend/scoring/: formula_v1.toml  formula_v2.toml
backend/seeds/: top_repos.toml
backend/src/: lib.rs  main.rs
backend/src/app/: error.rs  mcp_rate_limit.rs  mod.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs  scheduler.rs
backend/src/db/: mod.rs
backend/src/domain/: account.rs  agent_token.rs  generation.rs  library.rs  mod.rs  quality.rs  quality_display.rs  reference.rs  repo.rs  search.rs  snippet.rs  watchlist.rs
backend/src/handlers/: account.rs  admin.rs  agent_tokens.rs  auth.rs  health.rs  libraries.rs  me.rs  mod.rs  notification_channels.rs  notifications.rs  repo_signals.rs  repo_viewer.rs  repos.rs  repos_ingestion.rs  repos_query.rs  repos_refresh.rs  resolve.rs  search.rs  signals.rs  snippets.rs  use_cases.rs  watchlist.rs
backend/src/mcp/: auth.rs  server.rs
backend/src/search/: mod.rs
backend/src/security/: mod.rs
backend/src/services/: account_deletion.rs  account_preferences.rs  agent_token_events.rs  agent_tokens.rs  email_templates.rs  mod.rs  notification_channels.rs  notification_digest.rs  notifications.rs  radar.rs  recommendations.rs  (+12 more)
(+272 files in other folders)
