[package]
name = "usestakly-backend"
version = "0.1.0"
edition = "2024"
default-run = "usestakly-backend"

[features]
default = []
semantic-search = ["dep:fastembed"]

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
fastembed = { version = "5", optional = true }
hex = "0.4"
http = "1"
jsonwebtoken = "9"
octocrab = "0.49.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.5", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
